Change script source from main.jsx to main.tsx

--- a/index.html
+++ b/index.html
@@ -17,6 +17,5 @@
   <div id="root"></div>
 
   <!-- THIS IS IMPORTANT -->
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+<script type="module" src="/src/main.tsx"></script></body>
 </html>
